se agregaron los atributos loading lazy a todas las etiquetas img

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header>
 
         <a href="../index.html" class="logo">
-            <img src="./imgs/logo.png" alt="Logo Overtime">
+            <img src="./imgs/logo.png" alt="Logo Overtime" loading="lazy">
         </a>
 
         <nav class="navbar navbar-expand-md"  data-bs-theme="dark">
@@ -63,7 +63,7 @@
 
         <section class="hero">
             <div class="nascar-logo">
-                <img src="./imgs/nascar-logo.png" alt="Logo de Nascar" width="280px">
+                <img src="./imgs/nascar-logo.png" alt="Logo de Nascar" width="280px" loading="lazy">
             </div>
 
             <div class="video-container">
@@ -83,7 +83,7 @@
 
                 <article class="noticia1">
 
-                    <img src="./imgs/darlington.jpg" alt="Foto Noticia" class="image-container">
+                    <img src="./imgs/darlington.jpg" alt="Foto Noticia" class="image-container" loading="lazy">
                     <h3 class="titulo">Nascar: Hora de visitar a "La Dama de Negro"</h3>
                     <p class="parrafo">Este fin de semana NASCAR visitará Darlington en el marco de la 13ra fecha de la
                         temporada 2023.
@@ -98,7 +98,7 @@
             <article class="noticia2">
 
 
-                <img src="./imgs/400.jpg" alt="Foto Noticia" class="image-container">
+                <img src="./imgs/400.jpg" alt="Foto Noticia" class="image-container" loading="lazy">
                 <h3 class="titulo">Victoria 400 de Joe Gibbs Racing en NASCAR</h3>
                 <p class="parrafo">En una carrera marcada por las banderas amarillas, NASCAR visitó Kansas por la 12da
                     fecha de la
@@ -116,7 +116,7 @@
             <article class="noticia3">
 
 
-                <img src="./imgs/kansas.jpg" alt="Foto Noticia" class="image-container">
+                <img src="./imgs/kansas.jpg" alt="Foto Noticia" class="image-container" loading="lazy">
                 <h3 class="titulo">NASCAR en Kansas: Toda la info de las 400</h3>
                 <p class="parrafo">La categoría estadounidense visitará este fin de semana el óvalo de Kansas en el
                     marco de la
@@ -133,7 +133,7 @@
 
             <article class="noticia4">
 
-                <img src="./imgs/truex.jpg" alt="Foto Noticia" class="image-container">
+                <img src="./imgs/truex.jpg" alt="Foto Noticia" class="image-container" loading="lazy">
                 <h3 class="titulo">NASCAR: Victoria de Martin Truex Jr en la Milla Monstruo</h3>
                 <p class="parrafo">El piloto del Joe Gibbs Racing #19 ganó la Wurth 400 ayer en Dover International
                     Speedway y
@@ -162,19 +162,19 @@
         <section class="lideres">
 
             <div class="pos">
-                <img src="./imgs/ross.png" alt="Foto de Ross Chastain" class="img-container">
+                <img src="./imgs/ross.png" alt="Foto de Ross Chastain" class="img-container" loading="lazy">
                 <h3 class="nombre">Ross Chastain</h3>
                 <h4 class="pts">429 Puntos</h4>
             </div>
 
             <div class="pos">
-                <img src="./imgs/bell.png" alt="Foto de Christopher Bell" class="img-container">
+                <img src="./imgs/bell.png" alt="Foto de Christopher Bell" class="img-container" loading="lazy">
                 <h3 class="nombre">Cristopher Bell</h3>
                 <h4 class="pts">402 Puntos</h4>
             </div>
 
             <div class="pos">
-                <img src="./imgs/harvick.png" alt="Foto de Christopher Bell" class="img-container">
+                <img src="./imgs/harvick.png" alt="Foto de Christopher Bell" class="img-container" loading="lazy">
                 <h3 class="nombre">Kevin Harvick</h3>
                 <h4 class="pts">400 Puntos</h4>
             </div>
@@ -239,28 +239,28 @@
 
             <div class="carrera">
 
-                <img src="./imgs/charlotte.png" alt="Logo de Charlotte Motor Speedway" class="imgs">
+                <img src="./imgs/charlotte.png" alt="Logo de Charlotte Motor Speedway" class="imgs" loading="lazy">
                 <h3 class="nombre">Charlotte Motor Speedway</h3>
                 <h4 class="fecha">Mayo 28</h4>
 
             </div>
 
             <div class="carrera">
-                <img src="./imgs/wwtraceway.png" alt="Logo de World Wide Technology Raceway" class="imgs">
+                <img src="./imgs/wwtraceway.png" alt="Logo de World Wide Technology Raceway" class="imgs" loading="lazy">
                 <h3 class="nombre">World Wide Technology Raceway</h3>
                 <h4 class="fecha">Junio 4</h4>
 
             </div>
 
             <div class="carrera">
-                <img src="./imgs/sonoma.png" alt="Logo de Sonoma Raceway" class="imgs">
+                <img src="./imgs/sonoma.png" alt="Logo de Sonoma Raceway" class="imgs" loading="lazy">
                 <h3 class="nombre">Sonoma Raceway</h3>
                 <h4 class="fecha">Junio 11</h4>
 
             </div>
 
             <div class="carrera">
-                <img src="./imgs/nashville.png" alt="Logo de Nashville Raceway" class="imgs">
+                <img src="./imgs/nashville.png" alt="Logo de Nashville Raceway" class="imgs" loading="lazy">
                 <h3 class="nombre">Nashville Raceway</h3>
                 <h4 class="fecha">Junio 25</h4>
 
