--- a/notas/nota-nascar1.html
+++ b/notas/nota-nascar1.html
@@ -24,7 +24,7 @@
 
     <header>
         <a href="../index.html" class="logo">
-            <img src="../imgs/logo.png" alt="Overtime Logo">
+            <img src="../imgs/logo.png" alt="Overtime Logo" loading="lazy">
         </a>
 
         <nav class="navbar navbar-expand-md"  data-bs-theme="dark">
@@ -63,7 +63,7 @@
                 <h2>NASCAR: Hora de visitar a "La Dama de Negro"</h2>
                 <p class="fecha">11 de Mayo de 2023</p>
                 <div class="image-container">
-                    <img src="../imgs/darlington.jpg" alt="Imagen de la Noticia">
+                    <img src="../imgs/darlington.jpg" alt="Imagen de la Noticia" loading="lazy">
                 </div>
                 <div class="content-nota">
                     <p class="content">Este fin de semana NASCAR visitará Darlington en el marco de la 13ra fecha de la
@@ -80,7 +80,7 @@
                         23° en las curvas 3 & 4, 3° en la recta principal y 2° en la recta posterior.
                     </p>
                     <div class="image-container">
-                        <img src="../imgs/darlington2.jpg" alt="">
+                        <img src="../imgs/darlington2.jpg" alt="Joey Logano festejando la victoria en Darlington" loading="lazy">
                     </div>
                     <p>La carrera de la NASCAR Cup Series tendrá una distancia de 400 millas, pactada a 293 giros con
                         tres etapas de 90, 95 y 108 vueltas. <br><br>
@@ -94,7 +94,7 @@
                         Camaro #7 del JR Motorsports <br><br> </p>
 
                         <div class="image-container">
-                            <img src="../imgs/darlington3.jpg" alt="">
+                            <img src="../imgs/darlington3.jpg" alt="Victorias en Darlington de las categorias Trucks y Xfinity" loading="lazy">
                         </div>
                         <p> Los horarios para estas carreras serán: <br><br>
 
