--- a/notas/nota-nascar2.html
+++ b/notas/nota-nascar2.html
@@ -20,7 +20,7 @@
 <body>
     <header>
         <a href="../index.html" class="logo">
-            <img src="../imgs/logo.png" alt="Overtime Logo">
+            <img src="../imgs/logo.png" alt="Overtime Logo" loading="lazy">
         </a>
 
         <nav class="navbar navbar-expand-md"  data-bs-theme="dark">
@@ -59,7 +59,7 @@
                 <h2>Victoria N°400 de Joe Gibbs Racing en NASCAR de la mano de Denny Hamlin</h2>
                 <p class="fecha">9 de Mayo de 2023</p>
                 <div class="image-container">
-                    <img src="../imgs/400.jpg" alt="Imagen de la Noticia">
+                    <img src="../imgs/400.jpg" alt="Imagen de la Noticia" loading="lazy">
                 </div>
                 <div class="content-nota">
                     <p class="content">El piloto del Joe Gibbs #11 ganó la Advent Health 400 ayer en Kansas luego de un
@@ -75,7 +75,7 @@
                         amarillas en la carrera.
                     </p>
                     <div class="image-container">
-                        <img src="../imgs/400-2.jpg" alt="Auto de Denny Hamlin festejando la victoria">
+                        <img src="../imgs/400-2.jpg" alt="Auto de Denny Hamlin festejando la victoria" loading="lazy"> 
                     </div>
                     <p>De las 11 amarillas, dos fueron por la finalización de etapas, la primera ganada por Denny Hamlin
                         #11 con un dominio total de Toyota que colocó sus 6 autos en el top 7. La etapa 2 fue ganada por
@@ -97,7 +97,7 @@
                         Vuelta 2016: Trompo en las curvas 3 y 4 del #43 de Erik Jones.<br><br>
 
                     <div class="image-container">
-                        <img src="../imgs/400-3.jpg" alt="Kansas Highlights">
+                        <img src="../imgs/400-3.jpg" alt="Kansas Highlights" loading="lazy">
                     </div>
                     <p> En el final de la carrera tuvimos la pelea por la victoria entre Denny Hamlin #11 y Kyle Larson
                         #5 donde los pilotos también tuvieron un incidente en la recta posterior, aunque sin banderas
