--- a/notas/nota-nascar3.html
+++ b/notas/nota-nascar3.html
@@ -20,7 +20,7 @@
 <body>
     <header>
         <a href="../index.html" class="logo">
-            <img src="../imgs/logo.png" alt="Overtime Logo">
+            <img src="../imgs/logo.png" alt="Overtime Logo" loading="lazy">
         </a>
 
         <nav class="navbar navbar-expand-md"  data-bs-theme="dark">
@@ -59,7 +59,7 @@
                 <h2>NASCAR en Kansas: Toda la información para la Adventh Health 400</h2>
                 <p class="fecha">4 de Mayo de 2023</p>
                 <div class="image-container">
-                    <img src="../imgs/kansas.jpg" alt="Imagen de la Noticia">
+                    <img src="../imgs/kansas.jpg" alt="Imagen de la Noticia" loading="lazy">
                 </div>
                 <div class="content-nota">
                     <p class="content">La categoría estadounidense visitará este fin de semana el óvalo de Kansas en el
@@ -74,7 +74,7 @@
                         Logano en la 2020 Hollywood Casino 400.
                     </p>
                     <div class="image-container">
-                        <img src="../imgs/kansas2.jpg" alt="Circuito de Kansas 400">
+                        <img src="../imgs/kansas2.jpg" alt="Circuito de Kansas 400" loading="lazy">
                     </div>
                     <p>El ganador del año pasado fue el 23XI team, equipo de Denny Hamlin y Michael Jordan con el auto
                         #45 en las dos carreras celebradas en este trazado. Fue victoria con Kurt Busch en la carrera
@@ -87,7 +87,7 @@
                         la Ford F-150 #38 del Front Row Motorsports.
 
                     <div class="image-container">
-                        <img src="../imgs/kansas3.jpg" alt="Nigel Kinrade / NKP / Motorsports Images">
+                        <img src="../imgs/kansas3.jpg" alt="Nigel Kinrade / NKP / Motorsports Images" loading="lazy">
                     </div>
                     <p> Los horarios para estas carreras serán:<br><br>
                         Sábado - 06/05<br><br>
