--- a/notas/nota-nascar4.html
+++ b/notas/nota-nascar4.html
@@ -20,7 +20,7 @@
 <body>
     <header>
         <a href="../index.html" class="logo">
-            <img src="../imgs/logo.png" alt="Overtime Logo">
+            <img src="../imgs/logo.png" alt="Overtime Logo" loading="lazy">
         </a>
 
         <nav class="navbar navbar-expand-md"  data-bs-theme="dark">
@@ -59,7 +59,7 @@
                 <h2>NASCAR Cup Series: Victoria de Martin Truex Jr en la Milla Monstruo</h2>
                 <p class="fecha">2 de Mayo de 2023</p>
                 <div class="image-container">
-                    <img src="../imgs/truex.jpg" alt="Imagen de la Noticia">
+                    <img src="../imgs/truex.jpg" alt="Imagen de la Noticia" loading="lazy">
                 </div>
                 <div class="content-nota">
                     <p class="content">
@@ -71,7 +71,7 @@
                         ocurrieron un día lunes, luego de que la carrera se posponga por la lluvia (2007, 2019 & 2023).
                     </p>
                     <div class="image-container">
-                        <img src="../imgs/truex2.jpg" alt="LLuvia en el circuito, postergada la carrera">
+                        <img src="../imgs/truex2.jpg" alt="LLuvia en el circuito, postergada la carrera" loading="lazy">
                     </div>
                     <p><br>La carrera comenzó de forma caótica, con cuatro banderas amarillas, una por competición y
                         tres por incidentes. El primero fue provocado por el auto #42 de Noah Gragson (Chevrolet) en la
@@ -89,7 +89,7 @@
                         2.<br><br>
 
                     <div class="image-container">
-                        <img src="../imgs/truex3.jpg" alt="Dover Highlights">
+                        <img src="../imgs/truex3.jpg" alt="Dover Highlights" loading="lazy">
                     </div>
                     <p> <br>Martin Truex Jr, además de asegurar su pase a los playoffs 2023, logra su victoria 32 en 622
                         carreras y empató en la tabla general de victorias a Joey Logano y Dale Jarrett.<br><br>
