--- a/pages/calendario.html
+++ b/pages/calendario.html
@@ -21,7 +21,7 @@
 <body>
     <header>
         <a href="../index.html" class="logo">
-            <img src="../imgs/logo.png" alt="Logo Overtime">
+            <img src="../imgs/logo.png" alt="Logo Overtime" loading="lazy">
         </a>
 
         <nav class="navbar navbar-expand-md"  data-bs-theme="dark">
@@ -60,110 +60,110 @@
 
             <div class="carrera">
 
-                <img src="../imgs/charlotte.png" alt="Logo de Charlotte Motor Speedway" class="imgs">
+                <img src="../imgs/charlotte.png" alt="Logo de Charlotte Motor Speedway" class="imgs" loading="lazy">
                 <h3 class="nombre">Charlotte Motor Speedway</h3>
                 <h4 class="fecha">Mayo 28</h4>
 
             </div>
 
             <div class="carrera">
-                <img src="../imgs/wwtraceway.png" alt="Logo de World Wide Technology Raceway" class="imgs">
+                <img src="../imgs/wwtraceway.png" alt="Logo de World Wide Technology Raceway" class="imgs" loading="lazy">
                 <h3 class="nombre">World Wide Technology</h3>
                 <h4 class="fecha">Junio 4</h4>
 
             </div>
 
             <div class="carrera">
-                <img src="../imgs/sonoma.png" alt="Logo de Sonoma Raceway" class="imgs">
+                <img src="../imgs/sonoma.png" alt="Logo de Sonoma Raceway" class="imgs" loading="lazy">
                 <h3 class="nombre">Sonoma Raceway</h3>
                 <h4 class="fecha">Junio 11</h4>
 
             </div>
 
             <div class="carrera">
-                <img src="../imgs/nashville.png" alt="Logo de Nashville Raceway" class="imgs">
+                <img src="../imgs/nashville.png" alt="Logo de Nashville Raceway" class="imgs" loading="lazy">
                 <h3 class="nombre">Nashville Raceway</h3>
                 <h4 class="fecha">Junio 25</h4>
 
             </div>
 
             <div class="carrera">
-                <img src="../imgs/chicago.png" alt="Logo de Chicago Raceway" class="imgs">
+                <img src="../imgs/chicago.png" alt="Logo de Chicago Raceway" class="imgs" loading="lazy">
                 <h3 class="nombre">Chicago Street Course</h3>
                 <h4 class="fecha">Julio 2</h4>
 
             </div>
 
             <div class="carrera">
-                <img src="../imgs/atlanta.png" alt="Logo de Atlanta Raceway" class="imgs">
+                <img src="../imgs/atlanta.png" alt="Logo de Atlanta Raceway" class="imgs" loading="lazy">
                 <h3 class="nombre">Atlanta Motor Speedway</h3>
                 <h4 class="fecha">Julio 9</h4>
 
             </div>
 
             <div class="carrera">
-                <img src="../imgs/new-hampshire.png" alt="Logo de New hampshire Speedway" class="imgs">
+                <img src="../imgs/new-hampshire.png" alt="Logo de New hampshire Speedway" class="imgs" loading="lazy">
                 <h3 class="nombre">New Hampshire</h3>
                 <h4 class="fecha">Julio 16</h4>
 
             </div>
 
             <div class="carrera">
-                <img src="../imgs/pocono.jpg" alt="Logo de New Pocono Speedway" class="imgs">
+                <img src="../imgs/pocono.jpg" alt="Logo de New Pocono Speedway" class="imgs" loading="lazy">
                 <h3 class="nombre">Pocono Raceway</h3>
                 <h4 class="fecha">Julio 23</h4>
 
             </div>
 
             <div class="carrera">
-                <img src="../imgs/richmond.png" alt="Logo de Richmond Raceway" class="imgs">
+                <img src="../imgs/richmond.png" alt="Logo de Richmond Raceway" class="imgs" loading="lazy">
                 <h3 class="nombre">Richmond International Raceway</h3>
                 <h4 class="fecha">Julio 30</h4>
 
             </div>
 
             <div class="carrera">
-                <img src="../imgs/michigan.png" alt="Logo de Michigan International Speedway" class="imgs">
+                <img src="../imgs/michigan.png" alt="Logo de Michigan International Speedway" class="imgs" loading="lazy">
                 <h3 class="nombre">Michigan</h3>
                 <h4 class="fecha">Agosto 6</h4>
 
             </div>
 
             <div class="carrera">
-                <img src="../imgs/indianapolis.png" alt="Logo de Indianapolis Motor Speedway" class="imgs">
+                <img src="../imgs/indianapolis.png" alt="Logo de Indianapolis Motor Speedway" class="imgs" loading="lazy">
                 <h3 class="nombre">Indianapolis</h3>
                 <h4 class="fecha">Agosto 13</h4>
 
             </div>
 
             <div class="carrera">
-                <img src="../imgs/watkings-glen.png" alt="Logo de Watkings Glen International" class="imgs">
+                <img src="../imgs/watkings-glen.png" alt="Logo de Watkings Glen International" class="imgs" loading="lazy">
                 <h3 class="nombre">Watkings Glen International</h3>
                 <h4 class="fecha">Agosto 20</h4>
 
             </div>
             <div class="carrera">
-                <img src="../imgs/daytona.png" alt="Logo de Daytona Superspeedway" class="imgs">
+                <img src="../imgs/daytona.png" alt="Logo de Daytona Superspeedway" class="imgs" loading="lazy">
                 <h3 class="nombre">Daytona Super Speedway</h3>
                 <h4 class="fecha">Agosto 27</h4>
 
             </div>
 
             <div class="carrera">
-                <img src="../imgs/darlington-logo.png" alt="Logo de Darlington Speedway" class="imgs">
+                <img src="../imgs/darlington-logo.png" alt="Logo de Darlington Speedway" class="imgs" loading="lazy">
                 <h3 class="nombre">Darlington Speedway</h3>
                 <h4 class="fecha">Septiembre 3</h4>
 
             </div>
 
             <div class="carrera">
-                <img src="../imgs/kansas-logo.png" alt="Logo de Kansas Speedway" class="imgs">
+                <img src="../imgs/kansas-logo.png" alt="Logo de Kansas Speedway" class="imgs" loading="lazy">
                 <h3 class="nombre">Kansas Speedway</h3>
                 <h4 class="fecha">Septiembre 10</h4>
 
             </div>
             <div class="carrera">
-                <img src="../imgs/bristol.png" alt="Logo de Bristol Motor Speedway" class="imgs">
+                <img src="../imgs/bristol.png" alt="Logo de Bristol Motor Speedway" class="imgs" loading="lazy">
                 <h3 class="nombre">Bristol Motor Speedway</h3>
                 <h4 class="fecha">Septiembre 17</h4>
 
