--- a/pages/campeonato.html
+++ b/pages/campeonato.html
@@ -22,7 +22,7 @@
 
     <header>
         <a href="../index.html" class="logo">
-            <img src="../imgs/logo.png" alt="Overtime Logo">
+            <img src="../imgs/logo.png" alt="Overtime Logo" loading="lazy">
         </a>
 
         <nav class="navbar navbar-expand-md"  data-bs-theme="dark">
@@ -75,210 +75,210 @@
                     <tr>
                         <td>1</td>
                         <td>1</td>
-                        <td><img src="../imgs/chevy.png" alt="Logo de Chevrolet" class="img-tabla"></td>
+                        <td><img src="../imgs/chevy.png" alt="Logo de Chevrolet" class="img-tabla" loading="lazy"></td>
                         <td>Ross Chastain</td>
                         <td>429pts</td>
                     </tr>
                     <tr>
                         <td>2</td>
                         <td>20</td>
-                        <td><img src="../imgs/toyota.png" class="img-tabla"alt="Logo de Toyota"></td>
+                        <td><img src="../imgs/toyota.png" class="img-tabla"alt="Logo de Toyota" loading="lazy"></td>
                         <td>Cristopher Bell</td>
                         <td>402pts</td>
                     </tr>
                     <tr>
                         <td>3</td>
                         <td>4</td>
-                        <td><img src="../imgs/ford.png" class="img-tabla"alt="Logo de Ford"></td>
+                        <td><img src="../imgs/ford.png" class="img-tabla"alt="Logo de Ford" loading="lazy"></td>
                         <td>Kevin Harvick</td>
                         <td>400pts</td>
                     </tr>
                     <tr>
                         <td>4</td>
                         <td>19</td>
-                        <td><img src="../imgs/toyota.png" class="img-tabla"alt="Logo de Toyota"></td>
+                        <td><img src="../imgs/toyota.png" class="img-tabla"alt="Logo de Toyota" loading="lazy"></td>
                         <td>Martin Truex Jr</td>
                         <td>396pts</td>
                     </tr>
                     <tr>
                         <td>5</td>
                         <td>24</td>
-                        <td><img src="../imgs/chevy.png" class="img-tabla"alt="Logo de Chevrolet"></td>
+                        <td><img src="../imgs/chevy.png" class="img-tabla"alt="Logo de Chevrolet" loading="lazy"></td>
                         <td>William Byron</td>
                         <td>392pts</td>
                     </tr>
                     <tr>
                         <td>6</td>
                         <td>12</td>
-                        <td><img src="../imgs/ford.png" class="img-tabla"alt="Logo de Ford"></td>
+                        <td><img src="../imgs/ford.png" class="img-tabla"alt="Logo de Ford" loading="lazy"></td>
                         <td>Ryan Blaney</td>
                         <td>392pts</td>
                     </tr>
                     <tr>
                         <td>7</td>
                         <td>8</td>
-                        <td><img src="../imgs/chevy.png" class="img-tabla"alt="Logo de Chevrolet"></td>
+                        <td><img src="../imgs/chevy.png" class="img-tabla"alt="Logo de Chevrolet" loading="lazy"></td>
                         <td>Kyle Busch</td>
                         <td>389pts</td>
                     </tr>
                     <tr>
                         <td>8</td>
                         <td>11</td>
-                        <td><img src="../imgs/toyota.png" class="img-tabla"alt="Logo de Toyota"></td>
+                        <td><img src="../imgs/toyota.png" class="img-tabla"alt="Logo de Toyota" loading="lazy"></td>
                         <td>Denny Hamlin</td>
                         <td>388pts</td>
                     </tr>
                     <tr>
                         <td>9</td>
                         <td>22</td>
-                        <td><img src="../imgs/ford.png" class="img-tabla"alt="Logo de Ford"></td>
+                        <td><img src="../imgs/ford.png" class="img-tabla"alt="Logo de Ford" loading="lazy"></td>
                         <td>Joey Logano</td>
                         <td>380pts</td>
                     </tr>
                     <tr>
                         <td>10</td>
                         <td>5</td>
-                        <td><img src="../imgs/chevy.png" class="img-tabla"alt="Logo de Chevrolet"></td>
+                        <td><img src="../imgs/chevy.png" class="img-tabla"alt="Logo de Chevrolet" loading="lazy"></td>
                         <td>Kyle Larson</td>
                         <td>376pts</td>
                     </tr>
                     <tr>
                         <td>11</td>
                         <td>17</td>
-                        <td><img src="../imgs/ford.png" class="img-tabla"alt="Logo de Ford"></td>
+                        <td><img src="../imgs/ford.png" class="img-tabla"alt="Logo de Ford" loading="lazy"></td>
                         <td>Chris Buescher</td>
                         <td>374pts</td>
                     </tr>
                     <tr>
                         <td>12</td>
                         <td>6</td>
-                        <td><img src="../imgs/ford.png" class="img-tabla"alt="Logo de Ford"></td>
+                        <td><img src="../imgs/ford.png" class="img-tabla"alt="Logo de Ford" loading="lazy"></td>
                         <td>Brad Keselowski</td>
                         <td>368pts</td>
                     </tr>
                     <tr>
                         <td>13</td>
                         <td>45</td>
-                        <td><img src="../imgs/toyota.png" class="img-tabla"alt="Logo de Toyota"></td>
+                        <td><img src="../imgs/toyota.png" class="img-tabla"alt="Logo de Toyota" loading="lazy"></td>
                         <td>Tyler Reddick</td>
                         <td>362pts</td>
                     </tr>
                     <tr>
                         <td>14</td>
                         <td>47</td>
-                        <td><img src="../imgs/chevy.png" class="img-tabla"alt="Logo de Chevrolet"></td>
+                        <td><img src="../imgs/chevy.png" class="img-tabla"alt="Logo de Chevrolet" loading="lazy"></td>
                         <td>Ricky Stenhouse Jr</td>
                         <td>358pts</td>
                     </tr>
                     <tr>
                         <td>15</td>
                         <td>23</td>
-                        <td><img src="../imgs/toyota.png" class="img-tabla"alt="Logo de Toyota"></td>
+                        <td><img src="../imgs/toyota.png" class="img-tabla"alt="Logo de Toyota" loading="lazy"></td>
                         <td>Bubba Wallace</td>
                         <td>354pts</td>
                     </tr>
                     <tr>
                         <td>16</td>
                         <td>48</td>
-                        <td><img src="../imgs/chevy.png" class="img-tabla"alt="Logo de Chevrolet"></td>
+                        <td><img src="../imgs/chevy.png" class="img-tabla"alt="Logo de Chevrolet" loading="lazy"></td>
                         <td>Alex Bowman</td>
                         <td>331pts</td>
                     </tr>
                     <tr>
                         <td>17</td>
                         <td>99</td>
-                        <td><img src="../imgs/chevy.png" class="img-tabla"alt="Logo de Chevrolet"></td>
+                        <td><img src="../imgs/chevy.png" class="img-tabla"alt="Logo de Chevrolet" loading="lazy"></td>
                         <td>Daniel Suarez</td>
                         <td>328pts</td>
                     </tr>
                     <tr>
                         <td>18</td>
                         <td>54</td>
-                        <td><img src="../imgs/toyota.png" class="img-tabla"alt="Logo de Toyota"></td>
+                        <td><img src="../imgs/toyota.png" class="img-tabla"alt="Logo de Toyota" loading="lazy"></td>
                         <td>Ty Gibbs</td>
                         <td>320pts</td>
                     </tr>
                     <tr>
                         <td>19</td>
                         <td>34</td>
-                        <td><img src="../imgs/ford.png" class="img-tabla"alt="Logo de Ford"></td>
+                        <td><img src="../imgs/ford.png" class="img-tabla"alt="Logo de Ford" loading="lazy"></td>
                         <td>Michael MCDowell</td>
                         <td>317pts</td>
                     </tr>
                     <tr>
                         <td>20</td>
                         <td>16</td>
-                        <td><img src="../imgs/chevy.png" class="img-tabla"alt="Logo de Chevrolet"></td>
+                        <td><img src="../imgs/chevy.png" class="img-tabla"alt="Logo de Chevrolet" loading="lazy"></td>
                         <td>AJ Allmendinger</td>
                         <td>298pts</td>
                     </tr>
                     <tr>
                         <td>21</td>
                         <td>2</td>
-                        <td><img src="../imgs/ford.png" class="img-tabla"alt="Logo de Ford"></td>
+                        <td><img src="../imgs/ford.png" class="img-tabla"alt="Logo de Ford" loading="lazy"></td>
                         <td>Austin Cindric</td>
                         <td>292pts</td>
                     </tr>
                     <tr>
                         <td>22</td>
                         <td>7</td>
-                        <td><img src="../imgs/chevy.png" class="img-tabla"alt="Logo de Chevrolet"></td>
+                        <td><img src="../imgs/chevy.png" class="img-tabla"alt="Logo de Chevrolet" loading="lazy"></td>
                         <td>Corey Lajoie</td>
                         <td>291pts</td>
                     </tr>
                     <tr>
                         <td>23</td>
                         <td>31</td>
-                        <td><img src="../imgs/chevy.png" class="img-tabla"alt="Logo de Chevrolet"></td>
+                        <td><img src="../imgs/chevy.png" class="img-tabla"alt="Logo de Chevrolet" loading="lazy"></td>
                         <td>Justin Haley</td>
                         <td>284pts</td>
                     </tr>
                     <tr>
                         <td>24</td>
                         <td>51</td>
-                        <td><img src="../imgs/ford.png" class="img-tabla"alt="Logo de Ford"></td>
+                        <td><img src="../imgs/ford.png" class="img-tabla"alt="Logo de Ford" loading="lazy"></td>
                         <td>Todd Gililand</td>
                         <td>279pts</td>
                     </tr>
                     <tr>
                         <td>25</td>
                         <td>41</td>
-                        <td><img src="../imgs/ford.png" class="img-tabla"alt="Logo de Ford"></td>
+                        <td><img src="../imgs/ford.png" class="img-tabla"alt="Logo de Ford" loading="lazy"></td>
                         <td>Ryan Preece</td>
                         <td>269pts</td>
                     </tr>
                     <tr>
                         <td>26</td>
                         <td>10</td>
-                        <td><img src="../imgs/ford.png" class="img-tabla"alt="Logo de Ford"></td>
+                        <td><img src="../imgs/ford.png" class="img-tabla"alt="Logo de Ford" loading="lazy"></td>
                         <td>Eric Almirola</td>
                         <td>260pts</td>
                     </tr>
                     <tr>
                         <td>27</td>
                         <td>9</td>
-                        <td><img src="../imgs/chevy.png" class="img-tabla"alt="Logo de Chevrolet"></td>
+                        <td><img src="../imgs/chevy.png" class="img-tabla"alt="Logo de Chevrolet" loading="lazy"></td>
                         <td>Chase Elliott</td>
                         <td>247pts</td>
                     </tr>
                     <tr>
                         <td>28</td>
                         <td>3</td>
-                        <td><img src="../imgs/chevy.png" class="img-tabla"alt="Logo de Chevrolet"></td>
+                        <td><img src="../imgs/chevy.png" class="img-tabla"alt="Logo de Chevrolet" loading="lazy"></td>
                         <td>Austin Dillon</td>
                         <td>223pts</td>
                     </tr>
                     <tr>
                         <td>29</td>
                         <td>21</td>
-                        <td><img src="../imgs/ford.png" class="img-tabla"alt="Logo de Ford"></td>
+                        <td><img src="../imgs/ford.png" class="img-tabla"alt="Logo de Ford" loading="lazy"></td>
                         <td>Harrison Burton</td>
                         <td>219pts</td>
                     </tr>
                     <tr>
                         <td>30</td>
                         <td>43</td>
-                        <td><img src="../imgs/chevy.png" class="img-tabla"alt="Logo de Chevrolet"></td>
+                        <td><img src="../imgs/chevy.png" class="img-tabla"alt="Logo de Chevrolet" loading="lazy"></td>
                         <td>Erik Jones</td>
                         <td>190pts</td>
                     </tr>
