--- a/pages/pilotos.html
+++ b/pages/pilotos.html
@@ -20,7 +20,7 @@
 <body>
     <header>
         <a href="../index.html" class="logo">
-            <img src="../imgs/logo.png" alt="Logo Overtime">
+            <img src="../imgs/logo.png" alt="Logo Overtime" loading="lazy">
         </a>
 
         <nav class="navbar navbar-expand-md"  data-bs-theme="dark">
@@ -60,152 +60,152 @@
 
 
                 <div class="pos">
-                    <img src="../imgs/ross.png" alt="Foto de Ross Chastain">
+                    <img src="../imgs/ross.png" alt="Foto de Ross Chastain" loading="lazy">
                     <h3 class="nombre">Ross Chastain</h3>
                 </div>
 
                 <div class="pos">
-                    <img src="../imgs/bell.png" alt="Foto de Christopher Bell">
+                    <img src="../imgs/bell.png" alt="Foto de Christopher Bell" loading="lazy">
                     <h3 class="nombre">Cristopher Bell</h3>
                 </div>
 
                 <div class="pos">
-                    <img src="../imgs/harvick.png" alt="Foto de Christopher Bell">
+                    <img src="../imgs/harvick.png" alt="Foto de Christopher Bell" loading="lazy">
                     <h3 class="nombre">Kevin Harvick</h3>
                 </div>
 
                 <div class="pos">
-                    <img src="../imgs/elliot.png" alt="Foto de Chase Elliot">
+                    <img src="../imgs/elliot.png" alt="Foto de Chase Elliot" loading="lazy">
                     <h3 class="nombre">Chase Elliot</h3>
                 </div>
 
                 <div class="pos">
-                    <img src="../imgs/logano-cara.png" alt="Foto de Joey Logano">
+                    <img src="../imgs/logano-cara.png" alt="Foto de Joey Logano" loading="lazy">
                     <h3 class="nombre">Joey Logano</h3>
                 </div>
 
                 <div class="pos">
-                    <img src="../imgs/almirola.png" alt="Foto de Eric Almirola">
+                    <img src="../imgs/almirola.png" alt="Foto de Eric Almirola" loading="lazy">
                     <h3 class="nombre">Eric Almirola</h3>
                 </div>
 
                 <div class="pos">
-                    <img src="../imgs/hamlin-cara.png" alt="Foto de Denny Hamlin">
+                    <img src="../imgs/hamlin-cara.png" alt="Foto de Denny Hamlin" loading="lazy">
                     <h3 class="nombre">Denny Hamlin</h3>
                 </div>
 
                 <div class="pos">
-                    <img src="../imgs/larson.png" alt="Foto de Kyle Larson">
+                    <img src="../imgs/larson.png" alt="Foto de Kyle Larson" loading="lazy">
                     <h3 class="nombre">Kyle Larson</h3>
                 </div>
 
                 <div class="pos">
-                    <img src="../imgs/blaney.png" alt="Foto de Ryan Blaney">
+                    <img src="../imgs/blaney.png" alt="Foto de Ryan Blaney" loading="lazy">
                     <h3 class="nombre">Ryan Blaney</h3>
                 </div>
 
                 <div class="pos">
-                    <img src="../imgs/briscoe.png" alt="Foto de Chase Briscoe">
+                    <img src="../imgs/briscoe.png" alt="Foto de Chase Briscoe" loading="lazy">
                     <h3 class="nombre">Chase Briscoe</h3>
                 </div>
 
                 <div class="pos">
-                    <img src="../imgs/gilliland.png" alt="Foto de Todd Gilliland">
+                    <img src="../imgs/gilliland.png" alt="Foto de Todd Gilliland" loading="lazy">
                     <h3 class="nombre">Todd Gilliland</h3>
                 </div>
 
                 <div class="pos">
-                    <img src="../imgs/allmendinger.png" alt="Foto de AJ Allmendinger">
+                    <img src="../imgs/allmendinger.png" alt="Foto de AJ Allmendinger" loading="lazy">
                     <h3 class="nombre">AJ Allmendinger</h3>
                 </div>
                 
                 <div class="pos">
-                    <img src="../imgs/truex-cara.png" alt="Foto de Martin Truex Jr">
+                    <img src="../imgs/truex-cara.png" alt="Foto de Martin Truex Jr" loading="lazy">
                     <h3 class="nombre">Martin Truex Jr</h3>
                 </div>
 
                 <div class="pos">
-                    <img src="../imgs/cindric.png" alt="Foto de Austin Cindric">
+                    <img src="../imgs/cindric.png" alt="Foto de Austin Cindric" loading="lazy">
                     <h3 class="nombre">Austin Cindric</h3>
                 </div>
 
                 <div class="pos">
-                    <img src="../imgs/burton.png" alt="Foto de Harrison Burton">
+                    <img src="../imgs/burton.png" alt="Foto de Harrison Burton" loading="lazy">
                     <h3 class="nombre">Harrison Burton</h3>
                 </div>
 
                 <div class="pos">
-                    <img src="../imgs/wallace.png" alt="Foto de Bubba Wallace">
+                    <img src="../imgs/wallace.png" alt="Foto de Bubba Wallace" loading="lazy">
                     <h3 class="nombre">Bubba Wallace</h3>
                 </div>
 
                 <div class="pos">
-                    <img src="../imgs/byron.png" alt="Foto de William Byron">
+                    <img src="../imgs/byron.png" alt="Foto de William Byron" loading="lazy">
                     <h3 class="nombre">William Byron</h3>
                 </div>
 
                 <div class="pos">
-                    <img src="../imgs/dillon.png" alt="Foto de Austin Dillon">
+                    <img src="../imgs/dillon.png" alt="Foto de Austin Dillon" loading="lazy">
                     <h3 class="nombre">Austin Dillon</h3>
                 </div>
 
                 <div class="pos">
-                    <img src="../imgs/haley.png" alt="Foto de Justin Haley">
+                    <img src="../imgs/haley.png" alt="Foto de Justin Haley" loading="lazy">
                     <h3 class="nombre">Justin Haley</h3>
                 </div>
 
                 <div class="pos">
-                    <img src="../imgs/mcdowell.png" alt="Foto de Michael McDowell">
+                    <img src="../imgs/mcdowell.png" alt="Foto de Michael McDowell" loading="lazy">
                     <h3 class="nombre">Michael McDowell</h3>
                 </div>
 
                 <div class="pos">
-                    <img src="../imgs/preece.png" alt="Foto de Ryan Preece">
+                    <img src="../imgs/preece.png" alt="Foto de Ryan Preece" loading="lazy">
                     <h3 class="nombre">Ryan Preece</h3>
                 </div>
 
                 <div class="pos">
-                    <img src="../imgs/jones.png" alt="Foto de Eric Jones">
+                    <img src="../imgs/jones.png" alt="Foto de Eric Jones" loading="lazy">
                     <h3 class="nombre">Eric Jones</h3>
                 </div>
 
                 <div class="pos">
-                    <img src="../imgs/reddick.png" alt="Foto de Tyler Reddick">
+                    <img src="../imgs/reddick.png" alt="Foto de Tyler Reddick" loading="lazy">
                     <h3 class="nombre">Tyler Reddick</h3>
                 </div>
 
                 <div class="pos">
-                    <img src="../imgs/stenhouse.png" alt="Foto de Ricky Stenhouse Jr.">
+                    <img src="../imgs/stenhouse.png" alt="Foto de Ricky Stenhouse Jr." loading="lazy">
                     <h3 class="nombre">Ricky Stenhouse Jr.</h3>
                 </div>
 
                 <div class="pos">
-                    <img src="../imgs/bowman.png" alt="Foto de Alex Bowman">
+                    <img src="../imgs/bowman.png" alt="Foto de Alex Bowman" loading="lazy">
                     <h3 class="nombre">Alex Bowman</h3>
                 </div>
                 
                 <div class="pos">
-                    <img src="../imgs/gibbs.png" alt="Foto de Ty Gibbs">
+                    <img src="../imgs/gibbs.png" alt="Foto de Ty Gibbs" loading="lazy">
                     <h3 class="nombre">Ty Gibbs</h3>
                 </div>
 
                 <div class="pos">
-                    <img src="../imgs/keselowski.png" alt="Foto de Brad Keselowski">
+                    <img src="../imgs/keselowski.png" alt="Foto de Brad Keselowski" loading="lazy">
                     <h3 class="nombre">Brad Keselowski</h3>
                 </div>
 
                 <div class="pos">
-                    <img src="../imgs/busch.png" alt="Foto de Kyle Busch">
+                    <img src="../imgs/busch.png" alt="Foto de Kyle Busch" loading="lazy">
                     <h3 class="nombre">Kyle Busch</h3>
                 </div>
 
                 <div class="pos">
-                    <img src="../imgs/suarez.png" alt="Foto de Daniel Suarez">
+                    <img src="../imgs/suarez.png" alt="Foto de Daniel Suarez" loading="lazy">
                     <h3 class="nombre">Daniel Suarez</h3>
                 </div>
 
                 <div class="pos">
-                    <img src="../imgs/lajoie.png" alt="Foto de Corie LaJoie">
+                    <img src="../imgs/lajoie.png" alt="Foto de Corie LaJoie" loading="lazy">
                     <h3 class="nombre">Corie LaJoie</h3>
                 </div>
 
