--- a/pages/videos.html
+++ b/pages/videos.html
@@ -19,7 +19,7 @@
 
 <body>
     <header>
-        <a href="../index.html" class="logo">
+        <a href="../index.html" class="logo" loading="lazy">
             <img src="../imgs/logo.png" alt="Logo Overtime">
         </a>
 
